<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GestionarProductoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_gestionproductos"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#213087"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_nombre"
        />

    <EditText
        android:id="@+id/g_txtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_digitenombre"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_precio"
        />

    <EditText
        android:id="@+id/g_txtprecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_fecha"
        />

    <EditText
        android:id="@+id/g_txtfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:text=""
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</LinearLayout>